# theConstruct

./: .gitignore  README.md  TECHNICAL_DOCUMENT.md
application_layer/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  requirements.txt
application_layer/app/: README.md  main.py
application_layer/functions/: package-lock.json  package.json
application_layer/tests/: README.md  __init__.py  conftest.py  pytest.ini
blockchain_layer/: README.md
blockchain_layer/services/smart_contracts/injective/asset_listing/: Cargo.toml  README.md
blockchain_layer/services/smart_contracts/injective/asset_listing/src/: contract.rs  error.rs  helpers.rs  integration_tests.rs  msg.rs  state.rs
presentation_layer/svelte_the_construct/: FEATURES.md  OVERVIEW.md  ROADMAP.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js
presentation_layer/the_construct/: .firebaserc  .gitignore  README.md  pubspec.yaml
services/: README.md
services/api_gateway/: .gitignore  README.md  requirements.txt
services/billing_payments/: README.md  app.py  models.py
services/logistics/: README.md  models.py
services/notifications/: README.md  app.py
services/pubsub/: api-project-371618-5425bc261363.json
services/robot_catalog/: CONSTRUCTION_GUIDELINE.md  README.md  app.py  functions.py  models.py  requirements.txt  sample_data.py
services/secrurity/: README.md
services/service_catalog/: README.md  app.py
services/smart_contract_management/: README.md
services/software_catalog/: GUIDELINES.md  README.md  app.py  models.py  (+1 more)
(+320 files in other folders)
