[package]
name = "asset_listing"
version = "0.1.0"
authors = ["randynolden <randy@kaitechcorp.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
sylvia = "0.9.2"
schemars = "0.8.12"
serde = "1.0.193"
thiserror = { version = "1.0.50" }
wasm = "0.0.0"

[dev-dependencies]
cosmwasm-schema = "1.3.1"
cw-multi-test = "0.13.2"
